# docs/swagger.json
@@ -11,7 +11,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/auth": {
+        "/api/v1/auth": {
             "get": {
                 "tags": [
                     "Auth"
@@ -54,7 +54,7 @@
                 }
             }
         },
-        "/refresh": {
+        "/api/v1/refresh": {
             "get": {
                 "tags": [
                     "Auth"
